# task_monitor

./: README.md  config.example.toml  pyproject.toml
docs/coding_agent/: structured_json_contract.md
docs/coding_agent/plan/: 20260428_1.md  20260428_2.md  20260428_3.md
docs/coding_agent/research/: 20260428_1.md  20260428_2.md  20260428_3.md
docs/coding_agent/todo/: 20260428_1.md  20260428_2.md  20260428_3.md
docs/design/: 1.txt
src/task_monitor/: __init__.py  cache.py  cli.py  config.py  context.py  evaluator.py  models.py  monitor_logger.py  notifier.py  orchestrator.py  runner.py  structured_log.py
tests/: test_cache.py  test_cli.py  test_config.py  test_context.py  test_evaluator.py  test_notifier.py  test_orchestrator.py  test_runner.py  test_structured_log.py
