[project]
name = "task-monitor"
version = "0.1.0"
description = "A lightweight Linux cron task monitor with structured log evaluation and Feishu notification."
requires-python = ">=3.8,<3.13"
dependencies = [
    "tomli; python_version < '3.11'",
]

[project.scripts]
task_monitor = "task_monitor.cli:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

